In pages.Project I updated imports, added custom hook 'useAuth', added useState variable to store project data, a useParams variable for id sent through path, an axios request using id to retrieve project, a basic return statement to test it all. + In pages.ProjectPage.ProjectStyles I added rudimentary styles to better visualize the data. + In pages.Dashboard.Dashboard I replaced useState variable 'cars' with 'projects', replaced axios request for cars for projects, added a return that would iterate through all returned projects and display its title author and description in a link formart that when clicked routes user to projectsPage. + Updated Styles for Dashboard + Updated styles for NavBar + In components.Header renamed Link to 'BUGtracker' + updated styels for header + Removed return for footer (unsure if I will delete whole component) + Added a file for axiosRequest but am not sure whether I will use it. + updated styles for App.js.

--- a/frontend/src/components/NavBar/NavBarStyles.css
+++ b/frontend/src/components/NavBar/NavBarStyles.css
@@ -5,7 +5,10 @@
   padding-left: 0;
   margin-left: 0%;
   background-color: rgb(131, 131, 131);
-  height: max-content;
+  min-height: 100vh;
+  height: 100%;
+  margin-bottom: -15000px; /* allows navbar to stay full height of page */
+  padding-bottom: 15000px;
 }
 
 .Side-NavBar ul {
@@ -14,4 +17,9 @@
 
 .Side-NavBar button {
   min-width: 10rem;
+}
+
+.NavBar-container {
+  overflow: hidden;
+  width: fit-content;
 }
