--- a/frontend/src/pages/DashBoard/DashBoardStyless.css
+++ b/frontend/src/pages/DashBoard/DashBoardStyless.css
@@ -1,4 +1,39 @@
 .nav-projects-container {
   display: flex;
   flex-direction: row;
+  margin: 0%;
+}
+
+.projects-container {
+  margin-bottom: auto;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.projects-head {
+  display: table-cell;
+  min-width: fit-content;
+  height: fit-content;
+  background-color: rgb(0, 0, 0);
+  color: rgb(177, 177, 177);
+  padding: 6px;
+  margin-top: 0%;
+  text-align: center;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+.projects-head {
+  width: 8rem;
+}
+.projects-head h3 {
+  margin: 0%;
+}
+
+.project-link {
+  display: flex;
+  justify-content: space-around;
+  background-color: rgb(139, 139, 139);
+  margin: 0.4rem;
+  border-radius: 10px;
 }
