--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,8 @@
+/* This is to keep padding from auto shifing 40 px right for some reason */
 ul {
   padding-left: 0%;
+}
+
+.page {
+  background-color: rgb(68, 68, 68);
 }
