--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -9,10 +9,10 @@ li {
 }
 
 .Header {
-  background: steelblue;
+  background: rgb(82, 81, 81);
   box-shadow: 4px 2px 5px gray;
   color: white;
-  margin-bottom: 2rem;
+  margin-bottom: 0rem;
   padding: 1.5rem 2rem;
 }
 
