--- a/frontend/src/pages/ProjectPage/ProjectStyles.css
+++ b/frontend/src/pages/ProjectPage/ProjectStyles.css
@@ -1,1 +1,29 @@
+.nav-project-tickets-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin: 0%;
+}
+.project-head {
+  display: table-cell;
+  min-width: fit-content;
+  height: fit-content;
+  background-color: rgb(0, 0, 0);
+  color: rgb(177, 177, 177);
+  padding: 6px;
+  margin-top: 0%;
+  text-align: center;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
 
+.project-head h3 {
+  margin: 0%;
+}
+
+.project-container {
+  margin-bottom: auto;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
