--- a/frontend/src/pages/ProjectPage/ProjectStyles.css
+++ b/frontend/src/pages/ProjectPage/ProjectStyles.css
@@ -25,5 +25,38 @@
   margin-bottom: auto;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 70%;
+}
+
+.project-info-container {
+  background-color: rgb(131, 131, 131);
+  padding: 1rem;
+  border-radius: 10px;
+}
+
+.ticket-table {
+  margin-top: 10px;
+  background-color: rgb(185, 185, 185);
+  border-radius: 10px;
+  width: 100%;
+  padding: 5px;
+}
+
+tbody tr {
+  height: 2rem;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: #cecece;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #acacac;
+}
+
+.ticket-view-btn {
+  margin: 10px 0;
+  padding: 10px;
+  width: 100%;
+  height: 100%;
 }
