--- a/frontend/src/pages/ProjectPage/ProjectStyles.css
+++ b/frontend/src/pages/ProjectPage/ProjectStyles.css
@@ -42,6 +42,10 @@
   padding: 5px;
 }
 
+tbody td {
+  text-align: center;
+}
+
 tbody tr {
   height: 2rem;
 }
@@ -55,8 +59,15 @@ tbody tr:nth-child(even) {
 }
 
 .ticket-view-btn {
-  margin: 10px 0;
-  padding: 10px;
   width: 100%;
   height: 100%;
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  padding: 5px, 0;
+}
+
+.ticket-view-btn :hover {
+  color: #ffffff;
+  background-color: rgb(0, 0, 0);
 }
