In frontend Project.jsx updated imports. + In InspectTicket.jsx I updated imports, added useState var that conditionaly displays post comment section, added useState that holds user input value in post comment, added useState var requestReload that will trigger a page reload, added a useEffect that monitors id from useParams and will call setRequestReload to !requestReload, alter the original useEffect to monitor requestReload for any changes and added an axios request that will get all comments related to current ticket, added axios request for posting a comment, added a function handleSubmit that is triggered upon user clicking post button and sets var equal to all fields required to insantiate a comment then passes it to post comment axios request, added contitional logic for displaying comments (if they exist) or a  message informing user comments for current ticket do not exist, In the return added to check if currrent user is author of the ticket and if so to display imported edit button, added button that can collapse post a comment form or open it, In EditTicket.jsx added imports const EditTicket which takes in props and returns a button which will eventually trigger a fullscreen modal to pop up when clicked.

--- a/frontend/src/pages/InspectTicket/InspectTicket.css
+++ b/frontend/src/pages/InspectTicket/InspectTicket.css
@@ -31,5 +31,24 @@
 .ticket-info-container {
   background-color: rgb(131, 131, 131);
   padding: 1rem;
-  border-radius: 10px;
+  border-radius: 25px;
+}
+
+.comments-container {
+  margin: 0.5rem;
+  background-color: rgb(83, 83, 83);
+  width: 50%;
+}
+
+.comment-box {
+  margin: 0.5rem;
+  margin-top: 0.5rem;
+  padding: 0.2rem 0.5rem;
+  background-color: rgb(219, 219, 219);
+  border-radius: 5px;
+}
+
+.view-comments-btn {
+  margin-bottom: 2rem;
+  margin-top: 2rem;
 }
