In frontend InspectTicket.jsx I updated imports, corrected === statment line.76, added new Import DeleteTicket in the return statement line.177. + In InspectTicket.css I updated styles. + In components I deleted Footer folder and all its files. + In components EditTicket.jsx corrected divs, changed props name. + In EditTicket.css I updated styles + In EditModal.jsx I added imports, declared EditModel as a function, created useState variables to hold original parent ticket and all updated fields the user may alter, created a hard coded dictionary(it will never be changed in DB) for priorities and types, created async put function that also reloads page and closes modal at the end, created function hanadleSubmit to created an updatedTicket object with all pertinant information for the axios request, added functional logic for displaying status button text line.78, added my return statment that holds to textfields(one for title, one for description) and three dropdown button fields(priority, type and status). + In EditModal.css added styling. + In components DeleteTicket.jsx I added initial imports, declared DeleteTicket as const, added useState variable that holds bool value indicating whether modal should be returned or not, and added return statment that contains a button which toggles on/off whether or not modal should be open or closed. +In DeleteModal.jsx added imports, declared DeleteModal as function, added useAuth variable, added useState variable that holds text input into modal textfield, added async function that deletes a ticket from the data base. + Added a function handleSubmit that checks user input to make sure it exaclty matches prompted text for user to delete ticket from database. + added return statment that contains cancel button submit button a warning to user and a text field. + In App.js I removed footer as an import and removed it from the return section.

--- a/frontend/src/components/EditTicket/EditTicket.css
+++ b/frontend/src/components/EditTicket/EditTicket.css
@@ -1,20 +1,23 @@
 /* Below are styles for edit button */
 .editbtn-container button {
-  background-color: rgb(255, 241, 51);
+  background-color: rgb(51, 105, 255);
   border-style: none;
   height: 3rem;
-  width: 3rem;
-  border-radius: 100%;
+  width: 5rem;
+  padding: 3px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 0%;
+  border-bottom-left-radius: 0%;
   float: right;
   font-weight: bold;
   transition: 0.9s;
 }
 
 .editbtn-container :hover {
-  border-style: solid;
-  border-width: 1px;
-  border-color: black;
   letter-spacing: 0.1rem;
 }
 
-/* Below are styles for Edit Modal */
+.editbtn-container button {
+  height: fit-content;
+}
