In frontend updated TicketStyles.css + Updated ProjectStyles.css + Updated Project.jsx imports, and added a button into the return that will eventually expand a modal for the user to create a new ticket. + In InspectTicket.jsx I added projectId to data passed into DeleteTicket return + In DashBoard I added props + In DeleteTicket component I passed props.projectId down to DeleteModal.jsx, In DeleteModal I updated imports, added const navigate set equal to useNavigate, add a nav functionality to run directly after the delete axios request has been made that routes user back to the project page for which the ticket was initially intended, + In App.js I added a useState function that holds a projectId only after one has been selected.

--- a/frontend/src/pages/ProjectPage/ProjectStyles.css
+++ b/frontend/src/pages/ProjectPage/ProjectStyles.css
@@ -35,7 +35,6 @@
 }
 
 .ticket-table {
-  margin-top: 10px;
   background-color: rgb(185, 185, 185);
   border-radius: 10px;
   width: 100%;
@@ -70,4 +69,37 @@ tbody tr:nth-child(even) {
 .ticket-view-btn :hover {
   color: #ffffff;
   background-color: rgb(0, 0, 0);
+}
+
+/* Tickets header and add button styels */
+.ticketstext-addbtn-container {
+  margin: 1rem;
+  margin-bottom: 0%;
+  background-color: #006b9c;
+  display: flex;
+  width: fit-content;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.ticketstext-addbtn-container h3 {
+  margin: 0.5rem;
+  padding: 0.1rem;
+  color: #ffffff;
+  background-color: #006b9c;
+  letter-spacing: 2px;
+}
+
+.ticketstext-addbtn-container button {
+  border-top-right-radius: 8px;
+  background-color: #acacac;
+  width: 3rem;
+  font-size: larger;
+  border-width: 1px;
+  transition: 600ms;
+}
+
+.ticketstext-addbtn-container button:hover {
+  border-top-right-radius: 8px;
+  background-color: rgb(72, 255, 72);
 }
