Testing a different format for rerendering page in projects.js

--- a/frontend/src/components/NavBar/NavBarStyles.css
+++ b/frontend/src/components/NavBar/NavBarStyles.css
@@ -18,7 +18,9 @@
 .Side-NavBar button {
   min-width: 10rem;
 }
-
+.Side-NavBar button:hover {
+  cursor: pointer;
+}
 .NavBar-container {
   overflow: hidden;
   width: fit-content;
