--- a/frontend/src/components/DeleteTicket/DeleteTicketStyles.css
+++ b/frontend/src/components/DeleteTicket/DeleteTicketStyles.css
@@ -18,6 +18,7 @@
 .delbtn-container :hover {
   letter-spacing: 0.1rem;
   color: rgb(190, 0, 0);
+  cursor: pointer;
 }
 
 .delbtn-container button {
@@ -88,6 +89,7 @@ form input {
   letter-spacing: 2px;
   color: rgb(255, 0, 0);
   font-weight: bold;
+  cursor: pointer;
 }
 
 .submitBtn button {
@@ -105,6 +107,7 @@ form input {
   color: rgb(4, 117, 0);
   font-weight: bold;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .submitBtn {
@@ -114,9 +117,16 @@ form input {
 .submitBtn:hover {
   background-color: #630000;
   color: red;
+  cursor: pointer;
 }
 
 .cancelBtn:hover {
   background-color: #51abff;
   color: white;
+  cursor: pointer;
+}
+
+.space-around {
+  display: flex;
+  justify-content: space-around;
 }
