In frontend InspectTicket.jsx updated comments, deleted useEffect on line.30, declared variable reloadConditions that holds id(from useParams) and requestReload(bool useState) then set the useEffect on line.37 to moniter it, in form component line.118 I added onKeyPress which looks for user to press the enter key which will act as a submit for the comment and post it, in if statment line.140 I sliced and reverse mapped the comments returned by axios so that the newest comments would be at the top, In the return statment line 208 I deleted the conditional logic for rendering post form and added it into the conditional logic for comments so that now one button will collapse both the post comment form and all comments. + Updated InspectTicket.css styles. + Updated DashBoardStyles.css styels. + In DashBoard.js I updated imports, added useState boolean requestReload and set state to true, I declared a variable reloadConditions set equal to both token(from useAuth import) and to requestReload, In useEffect I changed the monitered variable from token to reloadConditions, In return statment I added imported component AddProject and passed setRequestReload into it and then wrapped it and projects-head in a div. + In DeleteTicketStyles.css I updated styles. + In AddTicketStyles.css I updated styles. + In AddProjectStyles.css I updated styles. + In ProjectModal.jsx I added imports, declared function AddProjectModal and export default AddProjectModal, Inside the function I added const navigate set equal to useNavigate, added [user, token] from useAuth(), declared useState variable projectTitle and useState variable projectDescription, added postProject as async function call for post functionality, Added handlSubmit function (builds the new project object and passes it to axios call) to be called when form in return statment is submitted, added return statment which displays full screen modal with cancel button for closing it and a submit button for posting it with two text box

--- a/frontend/src/components/AddTicket/AddTicketStyles.css
+++ b/frontend/src/components/AddTicket/AddTicketStyles.css
@@ -54,6 +54,7 @@
   color: white;
   letter-spacing: 1px;
   width: 50%;
+  min-width: 350px;
   height: fit-content;
   margin-top: -10rem;
   border-radius: 10px;
