--- a/frontend/src/pages/InspectTicket/InspectTicket.css
+++ b/frontend/src/pages/InspectTicket/InspectTicket.css
@@ -34,18 +34,24 @@
   border-radius: 25px;
 }
 
-.comments-container {
-  margin: 0.5rem;
-  background-color: rgb(83, 83, 83);
-  width: 50%;
+.comment-box {
+  width: 65%;
+  min-width: 30rem;
+  height: fit-content;
+  margin-bottom: 3rem;
+  border-color: rgba(0, 0, 0, 0.233);
+  border-style: solid;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+}
+.comment-box p {
+  overflow: clip;
+  color: rgb(214, 214, 214);
 }
 
-.comment-box {
-  margin: 0.5rem;
-  margin-top: 0.5rem;
-  padding: 0.2rem 0.5rem;
-  background-color: rgb(219, 219, 219);
-  border-radius: 5px;
+.comment-box h4 {
+  color: rgb(255, 137, 137);
 }
 
 .view-comments-btn {
