In frontend Project.jsx I updated imports and updated return statment to include DeleteProject.jsx as component. + In NavBar.jsx I deleted useless classnames and added divs between each li. + In Header.jsx I added img src linking to BUGtraker logo. + In DeleteModal.jsx I updated imports. + In DeleteProjectModal.jsx I added imports, declated DeleteProjectModal as function, added usAuth vars user and tocken, added const navigate set to useNavigate, declared useState var with default '', declared axios request for deleting project, declared function handleSubmit that checks user input and if it matches prompt delProject is called, added return statment that contains full screen modal with cancel button submit button and unser input for confirmation of delete. + In DeleteProject.jsx I added imports, declared DeleteProject as const set to function call, inside scopre I eclared useState modalStatus that defaults to false, I declared return statment that contains toggle button for modal and modal import if user clicks button. + In AddTicketModal.jsx I updated postTicket axios request function by passing down and calling props.reloadProject(true) before closing modal. + In AddTicket.jsx I added reloadProject to props for AddTicketModel. + Updated styles in AddProjectStyles.css, DeleteProjectStyles.css, Header.css, NavBarStyles.css, DashBoardStyless.css. + Created new folder media  and uploaded virus.png to act as logo.

--- a/frontend/src/components/AddProject/AddProjectStyles.css
+++ b/frontend/src/components/AddProject/AddProjectStyles.css
@@ -37,7 +37,7 @@
   transition: 0.7s;
 }
 
-.cancelBtn:hover {
+.cancel-Btn:hover {
   background-color: rgb(252, 191, 191);
   letter-spacing: 2px;
   color: rgb(255, 0, 0);
@@ -59,4 +59,5 @@
   letter-spacing: 2px;
   color: rgb(4, 117, 0);
   font-weight: bold;
+  cursor: pointer;
 }
