In frontend DashBoard.js I updated imports, added useState var dateSwitchText with default '' (this holds button text value as user toggles projects from oldest to newest and vise versa), added function handleProjectsMap which reverses projects in its array, In useEffect I call setDateSwitchText to 'view by newest', in the return statement I incorporated new component FilterProjects and passed props then replaced 'username' for 'author', also in return statment added conditional logic to display text PROJECT COMPLETED if field is true. + In FilterProjectsByInputModal.jsx I changed the name of the returning function, replaced any reference to tickets to the correct corresponding projects information. + In FilterProjectsByDate.jsx I updated name of returning function and corrected any reference from tickets to projects. + In FilterProjects.jsx I updated import statment corrected const FilterTickets to FilterProjects, deleted function handleClick, updated any reference to tickets to the correct reference to project.

--- a/frontend/src/pages/DashBoard/DashBoardStyless.css
+++ b/frontend/src/pages/DashBoard/DashBoardStyless.css
@@ -29,6 +29,17 @@
   width: 65%;
 }
 
+.phead-filter {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.fltr-dateswitch {
+  display: flex;
+}
+
 .phead {
   display: flex;
 }
@@ -139,6 +150,19 @@
   border-color: rgba(0, 0, 0, 0.164);
 }
 
+.completed-project {
+  color: green;
+  width: 100%;
+  text-align: center;
+  border-style: solid;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+  border-color: rgba(0, 0, 0, 0.164);
+  padding: 1rem;
+  width: 95%;
+}
+
 .description-cuttoff {
   border-style: solid;
   border-left: none;
@@ -155,4 +179,8 @@
   margin-bottom: 1%;
   font-size: smaller;
   color: rgb(82, 82, 82);
+}
+
+.fltr-dateswitch {
+  min-width: 650px;
 }
