In frontend DashBoard.js I added useState function addButtonIsClicked with default of false so that the new conditional logic I set for rendering ProjectFilter import in the return can asses true or false(This was because filter button was showing when the modal was displayed and I am not sure why, I plan to rework at soonest convienience) + In AddProject.jsx, I added a function handleClick so that dashboard will be updated when user clicks add, In AddProjectModal.jsx I updated postProject axios request to include callback from DashBoard.jsx to change state to false when user clicks submit. I added function handleCancel to set modal closed as well as pass false back to dashboard.jsx

--- a/frontend/src/components/FilterProjects/FilterProjectsStyles.css
+++ b/frontend/src/components/FilterProjects/FilterProjectsStyles.css
@@ -61,5 +61,20 @@
   cursor: text;
 }
 
-.filter-modal-fullcontainer {
+.inputModal-dropDown-projects {
+  min-width: fit-content;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+}
+
+.prjct-dropbtn {
+  background-color: #0084ff;
+  color: white;
+  width: 6rem;
+  height: 2.75rem;
+  padding: auto;
+  font-size: 14px;
+  border: none;
+  cursor: pointer;
 }
