--- a/frontend/src/pages/TicketsPage/TicketsStyles.css
+++ b/frontend/src/pages/TicketsPage/TicketsStyles.css
@@ -60,6 +60,7 @@ tbody tr:nth-child(even) {
 }
 
 .ticket-view-btn :hover {
-  color: #ffffff;
-  background-color: rgb(0, 0, 0);
+  color: #caac00;
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
 }
