In frontend Tickets.jsx I added another useState variable dateSwitchText that holds text info as user toggles tickets from newest to oldest. + In RegisterPage.js I added a few divs and gace them css classNames to better style the page. + In LoginPage.js I added a few divs and classNames to better style the page. + In DashBoard.js I added a wrapping div to button line.67-69. + In Admin.jsx I deleted the useState variable users and will added it back once Database is returning proper values for requests to user table, I added two useState variables editValue and DelteValue which hold data for tickets/projects that are about to be deleted, Added function fonfirmRender which checks lench of data passed into it and returns bool if value exists then call it twice once for tickets once for projects then use the variables set equal to the function call as conditional rendering, Added function handleDeletClick which will opend the correct modal depending upon whether it was called from a project or ticket, Added function handleEditClick whcih opens the correct corresponding edit modal depending upon whether it was called from a project or a ticket, added function searchAndSet which takes in either all of projects or all of tickets and searches through it against user unput and set data to correct useState variable if it finds a match, In return statment I added a button to reload the page onClick, added input fields to projects field, added button info fiields for delete button lines 164-171, passed three more props into DeleteProjectModal (reloadPage={setRequestReload}, reloadCondition={requestReload}, isAdmin={true}), updated button info for tickets edit buttons, added props to EditProjectModal(setModalStatus={setEditProejctmodal}, reloadProject={setRequestReload}, reloadCondition={requestReload}), updated input fields info for tickets search, updated button info for tickets delete, added DeleteModal and EditModal for Tickets mapping statemnt. + Uploaded debug-1.png to med

--- a/frontend/src/components/AddProject/AddProjectStyles.css
+++ b/frontend/src/components/AddProject/AddProjectStyles.css
@@ -3,7 +3,8 @@
   height: 2rem;
   font-size: x-large;
   border-radius: 100%;
-  background-color: rgb(146, 146, 146);
+  background-color: #006fd6;
+  border-style: none;
   margin-left: 5px;
   border-width: 1px;
   transition: 1000ms;
@@ -11,7 +12,7 @@
 
 .projects-addbtn-container button:hover {
   border: none;
-  background-color: rgb(10, 201, 10);
+  background: rgb(10, 201, 10);
   cursor: pointer;
   color: rgb(0, 0, 0);
 }
