--- a/frontend/src/components/EditTicket/EditModal.css
+++ b/frontend/src/components/EditTicket/EditModal.css
@@ -19,7 +19,7 @@
   background-color: #585858;
   color: white;
   letter-spacing: 1px;
-  width: 50%;
+  width: 490px;
   height: fit-content;
   margin-top: -10rem;
   border-radius: 10px;
