--- a/frontend/src/pages/LoginPage/LoginPage.css
+++ b/frontend/src/pages/LoginPage/LoginPage.css
@@ -1,3 +1,119 @@
 .error {
   color: red;
 }
+
+button:hover {
+  cursor: pointer;
+}
+
+.login-page-background {
+  width: 100%;
+  height: 100vh;
+  background-color: #002d57;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  bottom: 0;
+  overflow: auto;
+}
+
+.login-img {
+  width: 100%;
+  height: 100vh;
+  background-image: url("/src/media/debug-1.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+  background-color: rgba(240, 248, 255, 0);
+  width: fit-content;
+  height: fit-contenta;
+  margin: auto;
+  margin-top: 32vh;
+  background-color: #0000007c;
+  padding: 5px;
+}
+
+.login-container h1 {
+  color: rgb(255, 255, 255);
+  text-shadow: 2px 2px #00000080;
+  padding: 5px;
+  margin: 0%;
+}
+
+.login-container label {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 5%;
+}
+
+label h3 {
+  color: rgb(255, 255, 255);
+  text-shadow: 2px 2px #000000;
+  font-weight: lighter;
+  margin-bottom: 0%;
+}
+
+.signIn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.signIn button {
+  border-style: none;
+  padding: 5px;
+  font-weight: bold;
+  background-color: aquamarine;
+}
+
+.register-link p {
+  text-decoration: none;
+  text-align: center;
+  font-weight: bold;
+  color: rgb(164, 72, 207);
+}
+
+.register-user-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  color: white;
+  align-items: center;
+  justify-items: center;
+  background-color: rgba(240, 248, 255, 0);
+  width: fit-content;
+  height: fit-content;
+  margin: auto;
+  margin-top: 32vh;
+  background-color: #0000007c;
+  padding: 5px;
+}
+
+.input-boxes {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  color: white;
+  align-items: center;
+  justify-items: center;
+  width: fit-content;
+  align-items: flex-end;
+}
