In backend authenticaion.urls.py I updated path for assign/ by changing the name of the imported class endpoint. + In authentication.views.py I updated the name of the endpoint PutIsStaff to IsStaff and added and endpoint for getting user by id. + In frontend added folder AdminUserAuthModal and file AdminUserAuthModal.jsx, in newly created file I added import statment declared AdminUserAuthModal as function which recieves props, added imported usAuth variable, added two useState variables which holds values for users username and is_staff field, added async function putUser which takes user information and updates db via axios request, added function handleSubmit for when user clicks the submit button in the modal then handleSubmit creates new user info via data passed through user input and calls axios function with it, added return statment for user edit. + In FilterTicketsByDateModal.jsx I corrected value assignment line 10. + In NavBar.jsx I updated imports added useAuth variable set, added useState variable isAdmin to conditionaly render admin tab in navBar, added useEffect which contains axios request function for get user by id, In the return statment I added conditional logic for rendering admin tab. + In Admin.jsx I updated imports, declared new useState variable editUserAuthModal which conditionaly renders edit user modal, added comments, declared usersConfirmation which is set to function confirmRender, In useEffect I added another try/catch to the end of async function call adding in segment for get users, In function handleEditClick I added else if for users, In function searchAndSet I added var checkBy and ran if else statment evaluating where function was called from and searching through the correct items, added function handleUserSubmit which prevents default and passes correct data to searchAndSet, In return statment I added another column for users and mapped through data retrieved by axios to display username and admin status. + In InspectTicket.

--- a/frontend/src/pages/InspectTicket/InspectTicket.css
+++ b/frontend/src/pages/InspectTicket/InspectTicket.css
@@ -8,8 +8,15 @@
   display: table-cell;
   min-width: fit-content;
   height: fit-content;
-  background-color: rgb(0, 0, 0);
-  color: rgb(177, 177, 177);
+  color: rgb(0, 0, 0);
+  background: linear-gradient(
+    to right top,
+    #8b22db,
+    #a32fdd,
+    #b63cd8,
+    #cc4fdd,
+    #e45fe4
+  );
   padding: 6px;
   margin-top: 0%;
   text-align: center;
@@ -29,33 +36,130 @@
 }
 
 .ticket-info-container {
+  display: flex;
   background-color: rgb(131, 131, 131);
   padding: 1rem;
   border-radius: 25px;
 }
 
+.ticket-info-container p {
+  color: rgba(0, 0, 0, 0.452);
+}
+
+.info-row {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  height: 100%;
+  align-items: center;
+  text-align: center;
+}
+
+.info-column {
+  text-align: center;
+}
+
+.author-text {
+  color: #000000;
+}
+
+.border-bottom-top {
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.247);
+  border-left: none;
+  border-right: none;
+  border-top: none;
+}
+
+.ticket-info-half-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  min-width: 50%;
+  align-items: center;
+}
+
+.ticket-descrip-box {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  width: 100%;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.247);
+  border-right: none;
+  border-bottom: none;
+  border-top: none;
+  margin: 0%;
+  height: 100%;
+}
+
+.ticket-descrip-box h3 {
+  padding: 1%;
+  margin-top: 0%;
+}
+
+.ticket-descrip-box p {
+  margin-bottom: 0%;
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.247);
+  border-right: none;
+  border-left: none;
+  border-top: none;
+  text-align: center;
+  padding-bottom: 2%;
+}
+
 .comment-box {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
   width: 65%;
   min-width: 30rem;
   height: fit-content;
   margin-bottom: 3rem;
-  border-color: rgba(0, 0, 0, 0.233);
+  border-width: 4px;
   border-style: solid;
-  border-left: none;
-  border-right: none;
-  border-bottom: none;
+  border-image: linear-gradient(
+      to right,
+      rgb(0, 0, 0),
+      rgb(0, 0, 0),
+      #300055,
+      #6c1a77,
+      rgba(153, 50, 204, 0)
+    )
+    1;
 }
 .comment-box p {
   overflow: clip;
-  color: rgb(214, 214, 214);
+  color: rgb(197, 197, 197);
+  padding-left: 10px;
+  letter-spacing: 1px;
 }
 
 .comment-box h4 {
-  color: rgb(255, 137, 137);
+  color: rgb(137, 164, 255);
+  padding-left: 30px;
+  margin-bottom: 0%;
 }
 
 .view-comments-btn {
-  margin-top: 2rem;
+  margin-top: 1rem;
+  background: transparent;
+  border: 2px solid;
+  background-color: #303030;
+  border-image: linear-gradient(
+      to top right,
+      #000000,
+      #2b2b2b,
+      #525252,
+      #b4b4b4,
+      #ffffff
+    )
+    1;
+  color: #929292;
+  font-weight: bold;
+  letter-spacing: 1px;
+  padding: 0.4rem 0.5rem;
 }
 
 .edit-delete-container {
@@ -70,4 +174,29 @@
 
 .viewComments-container {
   margin-bottom: 5rem;
+  margin-left: 5%;
+}
+
+.viewComments-container textarea {
+  margin-top: 1rem;
+  max-width: 40%;
+  min-width: 20rem;
+  background-color: #b8b8b8;
+  border-radius: 7px;
+  border: none;
+}
+
+.toggle-txtarea-post {
+  display: flex;
+  flex-direction: column;
+}
+
+.txtarea-post form {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2rem;
+}
+
+.txtarea-post form button {
+  width: fit-content;
 }
