--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,3 +24,23 @@ ul {
   padding: 0%;
   margin: 0%;
 }
+
+p {
+  /* font-family: "Lucida Console", "Courier New", monospace; */
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+  /* font-family: "Lucida Console", "Courier New", monospace; */
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+  /* font-family: "Lucida Console", "Courier New", monospace; */
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h3 {
+  /* font-family: "Lucida Console", "Courier New", monospace; */
+  font-family: Arial, Helvetica, sans-serif;
+}
