--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -36,15 +36,36 @@ b {
   font-size: larger;
 }
 
+/*  linear-gradient(
+    to right top,
+    #8b22db,
+    #a32fdd,
+    #b63cd8,
+    #cc4fdd,
+    #e45fe4
+  ); */
+
 .Header button {
   background: transparent;
-  border: 2px solid white;
-  color: white;
+  border: 2px solid;
+  background-color: #303030;
+  border-image: linear-gradient(
+      to top right,
+      #38003f,
+      #660074,
+      #8d00a0,
+      #c900e4,
+      #eb53ff
+    )
+    1;
+  color: #929292;
+  font-weight: bold;
+  letter-spacing: 1px;
   padding: 0.4rem 0.5rem;
 }
 
 .Header button:hover {
-  background: white;
+  background: #1a1a1a;
   color: steelblue;
   cursor: pointer;
 }
