--- a/frontend/src/pages/LoginPage/LoginPage.css
+++ b/frontend/src/pages/LoginPage/LoginPage.css
@@ -107,6 +107,21 @@ label h3 {
   padding: 5px;
 }
 
+.register-user-container2 {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  color: white;
+  align-items: center;
+  justify-items: center;
+  background-color: rgba(240, 248, 255, 0);
+  width: fit-content;
+  height: fit-content;
+  margin: auto;
+  background-color: #ffffff00;
+  padding: 5px;
+}
+
 .input-boxes {
   display: flex;
   flex-wrap: wrap;
